<resources>
    <string name="app_name">lesson_1</string>
    <string name="btn1">Открыть экран 1</string>
    <string name="btn2">Открыть экран 2</string>
    <string name="hint_display2">Вася Пупкин 1Г 1991</string>
    <string name="text_for_button_display2">Вывести список учеников</string>
    <string name="name">Вася</string>
    <string name="add_name">Добавить имя</string>
    <string name="show_all_names">Вывести все имена</string>
    <string name="back_button">На предыдущий экран</string>
    <string name="wrong_data">Данные введены неверно</string>
    <string name="no_pupil">Не добавлено ни одного ученика</string>
</resources>