<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".Display2">

    <EditText
        android:id="@+id/peopleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint_display2"
        android:inputType="textPersonName"
        tools:text="@string/hint_display2" />

    <Button
        android:id="@+id/showButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_for_button_display2" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height ="@dimen/scroll_height">
    <TextView
        android:id="@+id/peopleOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        tools:text="Вася Пупкин 1Г 1991 \n Петя Васюков 3В 2000" />
    </ScrollView>
    <Button
        android:id="@+id/backButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/back_button" />

</LinearLayout>